[workspace]
resolver = "2"
members = ["rust-crates/*"]

[workspace.dependencies]
spl-name-service = { package = "spl-name-service-2", version = "0.4.0" }
solana-program = "2.1.21"
solana-sdk = "2.1.21"
solana-client = "2.1.21"
solana-program-test = "2.1.21"
solana-account-decoder = "2.1.21"
spl-token = "7.0.0"
